--- a/frontend/src/assets/css/CategoryBookListPage.css
+++ b/frontend/src/assets/css/CategoryBookListPage.css
@@ -2,4 +2,10 @@ ul#book-list {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
+    margin-top: 0;
+}
+
+div#page-header h2 {
+    color: var(--default-font-color);
+    padding-top: 1.5em;
 }
